update to version 1.0.1

--- a/demo/index.html
+++ b/demo/index.html
@@ -19,7 +19,7 @@
             </div>
             <div class="form-row">
                 <label> Email </label>
-                <input data-valid="email" type="text" name="email" disabled>
+                <input data-valid="email" type="text" name="email">
             </div>
             <div class="form-row">
                 <label> Minimum 6 chars </label>
